--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <script src="sketch.js"></script>
     <script src="bird.js"></script>
     <script src="sling.js"></script>
+    <script src="pig.js"></script>
   </body>
 </html>
